--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h1><a href="#"></a></h1>
         <ul class="menu">
           <li class="menuDisable">
-            <a href="#">首頁</a>
+            <a href="./home.html">首頁</a>
           </li>
           <li class="menuActive">
             <a href="#">作品集</a>
