--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
             <a href="#">聯絡我</a>
           </li>
         </ul>
-
+        我是首頁
         <div class="menuIcon">
           <a href="#"
             ><img src="https://cdn-icons-png.flaticon.com/512/2976/2976215.png"
