--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Guan的切版作業</title>
-    <link rel="stylesheet" href="./cssReset.css" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="/css/cssReset.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
